# STARFiSh_v0.4_python3

./: .gitignore  LOGcurrentWaveSpeed.txt  LOGproposedGrid.txt  README.md  STARFiSh.config  Simulator.py  VascularPolynomialChaos.py  fedora_dependencies.sh  macdeps.sh  requirements.txt  solver.py  starfish.py  systemCheck.py  ubuntu_dependencies.sh  vnc.py
NetworkLib/: ODESolver.py  classBoundaryConditions.py  classCompliance.py  classMeasurements.py  classVascularNetwork.py  classVenousPool.py  classVessel.py  netlistManager.py
SolverLib/: class1DflowSolver.py  classBoundarys.py  classCommunicators.py  classConnections.py  classFields.py  classTimer.py
UnitTesting/: UT_singleVessel.py  unitTest_singleVessel.py
UtilityLib/: classConfigurableObjectBase.py  classRuntimeMemoryManager.py  classStarfishBaseObject.py  constants.py  crimsonNetlistAdapter.py  hdf5ToAscii.py  moduleCSV.py  moduleFilePathHandler.py  moduleStartUp.py  moduleXML.py  networkXml043.py  processing.py  progressBar.py  saveSimulationDataToCSV.py
VascularPolynomialChaosLib/: classCorrelationMatrices.py  classDistributionManager.py  classLocationOfInterest.py  classLocationOfInterestManager.py  classQuantityOfInterest.py  classRandomInput.py  classRandomInputManager.py  classSampleManager.py  classUqsaCase.py  classUqsaMeasures.py  classUqsaMethods.py  moduleBatchSimulationManager.py  moduleFilePathHandlerVPC.py  testBaseClass.py
VisualisationLib/: class2dVisualisation.py  class2dVisualisationOld.py  class3dLUT.py  class3dVisualisation.py
VncLib/: classGraph.py  xdot.py
docs/: crimson_netlist_binding_plan.md  netlist_1d_coupling_plan.md  starfish_reference.md
ext/: CMakeLists.txt  StarfishBridge.cpp  bindings.cpp  netlist_surfaces.xml  verify_bridge.py
ext/crimson_netlist/: ClosedLoopDownstreamSubsection.cxx  NetlistCircuit.cxx  NetlistCircuit.hxx
vnc_ui/: boundary_export.xml  edge_focused_ui.py  editor.py  network_export.xml  network_export_1.xml  panels.py  scene.py  scene_items.py  visualization_2d.py  vnc_ui.py  widgets.py
